tests/build/widget_new/cannot_unset_required1.stderr
error: cannot unset required property `foo`
  --> $DIR/cannot_unset_required1.rs:19:15
   |
19 |         foo = unset!;
   |               ^^^^^

error: missing required property `foo`
  --> $DIR/cannot_unset_required1.rs:9:1
   |
9  |   #[widget($crate::test_widget)]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
18 |       let _ = test_widget! {
   |  _____________-
19 | |         foo = unset!;
20 | |     };
   | |_____- in this macro invocation
   |
   = note: this error originates in the macro `test_widget` (in Nightly builds, run with -Z macro-backtrace for more info)
